k8s/comments-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deploy
spec:
  replicas: 1
  selector:
   matchLabels:
    app: comments
  template:
    metadata:
     labels:
      app: comments
    spec:
     containers:
      - name: comments
        image: akeren/comments 
---
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
