k8s/moderation-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deploy
spec:
  replicas: 1
  selector:
   matchLabels:
    app: moderation
  template:
    metadata:
     labels:
      app: moderation
    spec:
     containers:
      - name: moderation
        image: docker.io/blog/moderation 
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
