k8s/query-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deploy
spec:
  replicas: 1
  selector:
   matchLabels:
    app: query
  template:
    metadata:
     labels:
      app: query
    spec:
     containers:
      - name: query
        image: docker.io/blog/query 
---
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
